--- a/phone-commerce/src/main/resources/templates/admin_template/admin_orders.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_orders.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light" xmlns:th="https://www.thymeleaf.org">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +16,7 @@
   <link rel="stylesheet" th:href="@{/css/Admin.css}">
 </head>
 
+
 <body>
   <div class="container-fluid">
     <div class="row">
@@ -24,63 +24,54 @@
 
       <!-- Side Bar ____________________________________ -->
       <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary col-lg-2" id="sidebar"
-           style="min-height: 100vh;">
+        style="min-height: 100vh;">
         <ul class="nav nav-pills flex-column mb-auto list-item">
-
-          <a href="/admin"
-             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+          <a href="/Admin"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"></svg>
             <span class="fs-4"><i class="fas fa-shopping-cart"></i>PQShop</span>
           </a>
-
           <hr>
           <li class="nav-item">
-            <a href="/admin" class="nav-link active invidual-item" aria-current="page">
+            <a href="/Admin" class="nav-link active invidual-item" aria-current="page">
               <img th:src="@{/admin_logo/house-door.svg}" alt="">
               Trang Chủ
             </a>
           </li>
-
           <li class="nav-item">
-            <a href="/admin/product" class="nav-link link-body-emphasis invidual-item">
+          <a href="/Admin/Product" class="nav-link link-body-emphasis invidual-item">
 
-              <img th:src="@{/admin_logo/box2.svg}" alt="">
+            <img th:src="@{/admin_logo/box2.svg}" alt="">
               Sản Phẩm
             </a>
           </li>
-
           <li class="nav-item">
-            <a href="/admin/category" class="nav-link link-body-emphasis invidual-item">
-              <img th:src="@{/admin_logo/grid-3x3.svg}" alt="">
+          <a href="/Admin/Category" class="nav-link link-body-emphasis invidual-item">
+            <img th:src="@{/admin_logo/grid-3x3.svg}" alt="">
               Danh Mục
             </a>
           </li>
-
           <li class="nav-item">
-            <a href="/admin/color" class="nav-link link-body-emphasis invidual-item">
+            <a href="/Admin/Color" class="nav-link link-body-emphasis invidual-item">
               <img th:src="@{/admin_logo/paint-bucket.svg}" alt="">
               Màu Sắc
             </a>
           </li>
-
           <li class="nav-item">
-            <a href="/admin/brand" class="nav-link link-body-emphasis invidual-item">
+            <a href="/Admin/Brand" class="nav-link link-body-emphasis invidual-item">
               <img th:src="@{/admin_logo/slack.svg}" alt="">
               Thương Hiệu
             </a>
           </li>
-
           <li class="nav-item">
-            <a href="/admin/order" class="nav-link link-body-emphasis invidual-item">
-              <img th:src="@{/admin_logo/bag-dash.svg}" alt="">
+          <a href="/Admin/Order" class="nav-link link-body-emphasis invidual-item">
+            <img th:src="@{/admin_logo/bag-dash.svg}" alt="">
               Quản Lý Đơn Hàng
             </a>
           </li>
-
         </ul>
       </div>
       <!-- ____________________________________________________________________________________________-->
-
 
 
 
@@ -102,47 +93,37 @@
           </div>
         </div>
         <hr>
-        <div class="container">
-          <a href="/admin/product/add" class="add-product-btn">Thêm sản phẩm</a>
-        </div>
         <div class="row" style="padding: 20px;">
           <div class="col-md-12">
             <div class="card">
               <div class="header">
               </div>
+
               <div class="content table-responsive table-full-width">
                 <table class="table table-striped" id="table">
                   <thead>
-                    <tr>
+                    <tr >
                       <th>ID</th>
-                      <th>Hình</th>
-                      <th>Sản Phẩm</th>
-                      <th>Danh Mục</th>
-                      <th>Màu Sắc</th>
-                      <th>Thương Hiệu</th>
-                      <th>Giá Tiền</th>
+                      <th>Tài Khoản</th>
+                      <th>Tổng Tiền</th>
+                      <th>Ngày Đặt</th>
+                      <th>Trạng Thái</th>
                       <th>Hành Động</th>
                     </tr>
                   </thead>
-                  <tr th:each="product : ${products}">
-                    <td th:text="${product.getId()}"></td>
-                    <td>
-                      <img th:src="@{/image/__${product.getPicture()}__}" alt="" style="width: 100px; height: 150px;">
-                    </td>
-                    <td th:text="${product.getName()}">
-                    </td>
-                    <td th:text="${product.getCategory().getName()}">
-                    </td>
-                    <td th:text="${product.getColor().getName()}"></td>
-                    <td th:text="${product.getBrand().getName()}">
-                    </td>
-                    <td th:text="${product.getPrice()}"></td>
-                    <td>
-                      <button type="button" class="btn btn-success"><a th:href="@{/admin/product/edit/{id}(id=${product.id})}"><img th:src="@{/admin_logo/pencil-square.svg}" alt=""></a></button>
-                      <button type="button" class="btn btn-warning"><a th:href="@{/admin/product/detail/{id}(id=${product.id})}"><img th:src="@{/admin_logo/columns-gap.svg}" alt=""></a></button>
-                      <button type="button" class="btn btn-danger"><a th:href="@{/admin/product/delete/{id}(id=${product.id})}"><img th:src="@{/admin_logo/trash.svg}" alt=""></a></button>
-                    </td>
-                  </tr>
+                  <tbody>
+                    <tr th:each="order : ${orders}">
+                      <td th:text="${order.getId()}"></td>
+                      <td th:text="${order.getEmail()}"></td>
+                      <td th:text="${order.getTotal()}"></td>
+                      <td th:text="${order.getOrderCreated()}"></td>
+                      <td th:text="${order.getOrder_status()}"></td>
+                      <td>
+                        <button type="button" class="btn btn-success"><a th:href="@{/admin/orders/edit/{id}(id=${order.id})}"><img th:src="@{/admin_logo/check-lg.svg}" alt=""></a></button>
+                        <button type="button" class="btn btn-danger"><a th:href="@{/admin/orders/delete/{id}(id=${order.id})}"><img th:src="@{/admin_logo/trash.svg}" alt=""></a></button>
+                      </td>
+                    </tr>
+                  </tbody>
                 </table>
 
               </div>
